# caffeineClipper

./: README.md  index.html  package.json
.github/workflows/: release.yaml
docs/: index.html
src/: App.tsx  main.tsx  style.css  twitch.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: logo.icns
src-tauri/src/: main.rs
src/components/: Table.tsx  ThemeButton.tsx
src/utils/: history.ts  notifications.ts  settings.ts  twitch.ts
