[package]
name = "caffeineclipper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["clipboard-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "global-shortcut-all", "http-all", "notification-all", "path-all", "shell-open", "system-tray", "window-all"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
shellexpand = "2.1.2"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/tauri-plugin-fs-watch", rev = "44e0bb889b78cd6e6fa6255b3d39b8637cda98bd" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
